added input to pug file

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,3 +3,6 @@ html
     title= title
   body
     h1= message
+
+    input(id='hello', type='checkbox', name='agreement', checked=true)
+    label(for='hello')= 'hello'
